# crystals

./: .gitignore  .gitmodules  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE-CHECKLIST.rst  appveyor.yml  builtins_cifs.csv  dev-requirements.txt  fcc_si.cif  get_cifs.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.appveyor/: install-miniconda.ps1
.github/workflows/: ci.yml  cifs.yml  codeql-analysis.yml
crystals/: __init__.py  __main__.py  affine.py  atom.py  atom_data.py  base.py  biological.py  conversion.py  crystal.py  frozendict.py  lattice.py  parsers.py  protein.py  spg_data.py  writers.py
crystals/cifs/: Ac.cif  Ag.cif  Al.cif  Am.cif  As.cif  Au.cif  B.cif  Ba.cif  BaTiO3_cubic.cif  Be.cif  Bi.cif  Br.cif  C.cif  Ca.cif  Cd.cif  Ce-gamma.cif  Co.cif  Cr.cif  Cs.cif  Cu.cif  Dy.cif  Er.cif  Eu.cif  Fe.cif  FeAs.cif  Ga.cif  GaAs.cif  Gd.cif  Ge.cif  Hf.cif  Ho.cif  I.cif  In.cif  Ir.cif  K.cif  La.cif  Li.cif  Lu.cif  Mg.cif  Mn.cif  (+45 more)
crystals/indexing/: __init__.py  _pinkindexer.cpp  common.py  dirax.py  pinkindexer.py
crystals/indexing/tests/: test_dirax.py  test_pinkindexer.py
crystals/indexing/tests/data/: intensities_new  peaksOnDetector_m_new
crystals/tests/: test_atom.py  test_base.py  test_crystal.py  test_lattice.py  test_parsers.py  test_writers.py
crystals/tests/data/: issue5_MgSiO3.cartesian.POSCAR  issue5_MgSiO3.direct.POSCAR  issue7.cif  pwscf_graphite.out  pwscf_tise2.out
docs/: cmdline.rst  conf.py  guide.rst  index.rst  installation.rst  reference.rst
docs/api/: base-classes.rst  biological.rst  conversion.rst  data-structures.rst  indexing.rst  reference.rst  utilities.rst
docs/classes/: crystals.Atom.rst  crystals.AtomicStructure.rst  crystals.CIFParser.rst  crystals.CODParser.rst  crystals.Crystal.rst  crystals.Lattice.rst  crystals.PDBParser.rst  crystals.Supercell.rst
docs/functions/: crystals.Crystal.from_ase.rst  crystals.ase_atoms.rst  crystals.distance_cartesian.rst  crystals.distance_fractional.rst  crystals.write_xyz.rst
docs/guides/: atoms.rst  crystals.rst  guide.rst  indexing.rst
docs/guides/indexing/: dirax.rst  pinkindexer.rst
tests/: test_atom.py  test_base.py  test_conversion.py  test_crystal.py  test_lattice.py  test_parsers.py  test_supercell.py  test_writers.py  utils.py
tests/data/: SiC_partial_site_occ.cif  issue5_MgSiO3.cif  pwscf_snse.out
(+1 files in other folders)
